--- a/org.xtext.example.restdsl.ide/.gitignore
+++ b/org.xtext.example.restdsl.ide/.gitignore
@@ -58,3 +58,16 @@ local.properties
 # Uncomment this line if you wish to ignore the project description file.
 # Typically, this file would be tracked if it contains build/dependency configurations:
 #.project
+
+/.m2/
+build/
+!**/src/**/build
+!**/xtend-gen/**/build
+bin/
+target/
+.gradle/
+*._trace
+*.xtendbin
+org.eclipse.buildship.core.prefs
+/.DS_Store
+**/generated/
